# GISRepo

./: .gitignore  GetSourceCLFromView.sql  ProjectManagementREADME.md  README.md  UAC workaround.txt  aprx-diff  export-map.sh  non gis pre-commit  post-commit  pre-commit  storeLoginPasswords.py
ArcPro Project SRC management/: aprx-diff  export-map.sh  pre-commit
Configurations/: .condarc  .gitconfig  ArcGISTools git config  DevRemoteConnections.rdg  MoRemoteConnections.rdg  Powershell (All Users, All Hosts).ps1  Powershell (Current Users, All Hosts).ps1  Powershell 7 (All Users, All Hosts).ps1  Powershell Profile.ps1  ProdRemoteConnections.rdg  QaRemoteConnections.rdg  Windows Terminal settings.json  gitconfig  powershell 7 (All Users, All Hosts).lnk
Configurations/Automation/: autostoreopen.ps1  taskcreate_autostoreopen.bat
Configurations/githooks/: aprx-diff  export-map.sh  pre-commit  pre-push
Portal GIS scripts/Credential Manager/: credential_manager.md  storeLoginPasswords.py
Portal GIS scripts/Credential Manager/portal_scripts/: gis.py
Portal GIS scripts/Portal Scripts/: gis.py  sync_users.py  sync_users2.py
Python 3 deployment/: Python 3 setup.md  fileexplanation.md  python3_GIS_SETUP.ps1  readme.txt
Rust Demo/python/: rust_comparer.py
Rust Demo/test_rust_utm_converter/: Cargo.toml  pyproject.toml
Rust Demo/test_rust_utm_converter/examples/: test_example.rs
Rust Demo/test_rust_utm_converter/src/: lib.rs  main.rs
